# Tp2-concurrentes

./: .gitignore  Cargo.toml  README.md
resources/: down.rs  orders.json  up.rs
src/: action.rs  coffee_machine.rs  constants.rs  error.rs  errors.rs  input_controller.rs  leader_election.rs  lib.rs  main.rs  message_parser.rs  message_sender.rs  orders.rs  payment_method.rs  points_handler.rs  server.rs
src/coffee_machine/: coffee_machine.rs  input_controller.rs  machine.rs  main.rs  mod.rs  orders.rs
src/local_server/: leader_election.rs  main.rs  mod.rs  server.rs
