[package]
name = "tp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[[bin]]
name = "local_server"
path = "src/local_server/main.rs"