[package]
name = "tp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
actix = "0.13.0"
actix-rt = "2.0.0"

[[bin]]
name = "local_server"
path = "src/local_server/main.rs"

[[bin]]
name = "coffee_machine"
path = "src/coffee_machine/main.rs"
